// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /flight-log Get flight log with Id should return a single row when data is present for the given Id 1`] = `
{
  "aircraft_registration": "OH-STL",
  "ajlb_blank_rows_before": 0,
  "ajlb_seq_no": 1,
  "arrival_airport": "EFHK",
  "billable_member_id": 1,
  "billing_remarks": "N/A",
  "block_mins": 135,
  "block_time": "02:15",
  "created_at": Any<String>,
  "created_by": 10,
  "crew2_member_id": 7,
  "crew2_role": "FI",
  "crew3_member_id": null,
  "crew3_role": null,
  "crew4_member_id": null,
  "crew4_role": null,
  "departure_airport": "EFHK",
  "flight_id": Any<String>,
  "flight_mins": 105,
  "flight_time": "01:45",
  "flight_type": "KOU",
  "fuel_remaining_litres": "0.00",
  "fuel_uplift_litres": "50.00",
  "incident_or_observations": null,
  "instrument_flying_mins": 45,
  "invoice_number": "INV001",
  "is_billable_flight": true,
  "is_billed": true,
  "landing_time_utc": "2025-03-01T10:00:00.000Z",
  "night_flying_mins": 30,
  "non_billing_approved_by_member_id": null,
  "non_billing_reason": null,
  "number_of_landings": 1,
  "off_block_time_utc": "2025-03-01T08:00:00.000Z",
  "oil_uplift_litres": "1.50",
  "on_block_time_utc": "2025-03-01T10:15:00.000Z",
  "personal_remarks": "Smooth flight",
  "persons_on_board": 4,
  "pic_member_id": 6,
  "pic_role": "PIC",
  "priv_or_com_flight": "C",
  "status": "NEW",
  "takeoff_time_utc": "2025-03-01T08:15:00.000Z",
  "total_time_in_service": "2.00",
  "updated_at": Any<String>,
  "updated_by": 10,
}
`;

exports[`GET /flight-log should allow query parameters to be optional 1`] = `
{
  "aircraft_registration": "OH-STL",
  "ajlb_blank_rows_before": 0,
  "ajlb_seq_no": 1,
  "arrival_airport": "EFHK",
  "billable_member_id": 1,
  "billing_remarks": "N/A",
  "block_mins": 135,
  "block_time": "02:15",
  "created_at": Any<String>,
  "created_by": 10,
  "crew2_member_id": 7,
  "crew2_role": "FI",
  "crew3_member_id": null,
  "crew3_role": null,
  "crew4_member_id": null,
  "crew4_role": null,
  "departure_airport": "EFHK",
  "flight_id": Any<String>,
  "flight_mins": 105,
  "flight_time": "01:45",
  "flight_type": "KOU",
  "fuel_remaining_litres": "0.00",
  "fuel_uplift_litres": "50.00",
  "incident_or_observations": null,
  "instrument_flying_mins": 45,
  "invoice_number": "INV001",
  "is_billable_flight": true,
  "is_billed": true,
  "landing_time_utc": "2025-03-01T10:00:00.000Z",
  "night_flying_mins": 30,
  "non_billing_approved_by_member_id": null,
  "non_billing_reason": null,
  "number_of_landings": 1,
  "off_block_time_utc": "2025-03-01T08:00:00.000Z",
  "oil_uplift_litres": "1.50",
  "on_block_time_utc": "2025-03-01T10:15:00.000Z",
  "personal_remarks": "Smooth flight",
  "persons_on_board": 4,
  "pic_member_id": 6,
  "pic_role": "PIC",
  "priv_or_com_flight": "C",
  "status": "NEW",
  "takeoff_time_utc": "2025-03-01T08:15:00.000Z",
  "total_time_in_service": "2.00",
  "updated_at": Any<String>,
  "updated_by": 10,
}
`;

exports[`GET /flight-log should only return data for the logged in user when not admin 1`] = `
{
  "aircraft_registration": "OH-STL",
  "ajlb_blank_rows_before": 0,
  "ajlb_seq_no": 1,
  "arrival_airport": "EFHK",
  "billable_member_id": 1,
  "billing_remarks": "N/A",
  "block_mins": 135,
  "block_time": "02:15",
  "created_at": Any<String>,
  "created_by": 10,
  "crew2_member_id": 7,
  "crew2_role": "FI",
  "crew3_member_id": null,
  "crew3_role": null,
  "crew4_member_id": null,
  "crew4_role": null,
  "departure_airport": "EFHK",
  "flight_id": Any<String>,
  "flight_mins": 105,
  "flight_time": "01:45",
  "flight_type": "KOU",
  "fuel_remaining_litres": "0.00",
  "fuel_uplift_litres": "50.00",
  "incident_or_observations": null,
  "instrument_flying_mins": 45,
  "invoice_number": "INV001",
  "is_billable_flight": true,
  "is_billed": true,
  "landing_time_utc": "2025-03-01T10:00:00.000Z",
  "night_flying_mins": 30,
  "non_billing_approved_by_member_id": null,
  "non_billing_reason": null,
  "number_of_landings": 1,
  "off_block_time_utc": "2025-03-01T08:00:00.000Z",
  "oil_uplift_litres": "1.50",
  "on_block_time_utc": "2025-03-01T10:15:00.000Z",
  "personal_remarks": "Smooth flight",
  "persons_on_board": 4,
  "pic_member_id": 6,
  "pic_role": "PIC",
  "priv_or_com_flight": "C",
  "status": "NEW",
  "takeoff_time_utc": "2025-03-01T08:15:00.000Z",
  "total_time_in_service": "2.00",
  "updated_at": Any<String>,
  "updated_by": 10,
}
`;

exports[`GET /flight-log should return 200 for Start Date with time offset 1`] = `undefined`;

exports[`GET /flight-log should return 200 with valid query params 1`] = `
{
  "aircraft_registration": "OH-STL",
  "ajlb_blank_rows_before": 0,
  "ajlb_seq_no": 1,
  "arrival_airport": "EFHK",
  "billable_member_id": 1,
  "billing_remarks": "N/A",
  "block_mins": 135,
  "block_time": "02:15",
  "created_at": Any<String>,
  "created_by": 10,
  "crew2_member_id": 7,
  "crew2_role": "FI",
  "crew3_member_id": null,
  "crew3_role": null,
  "crew4_member_id": null,
  "crew4_role": null,
  "departure_airport": "EFHK",
  "flight_id": Any<String>,
  "flight_mins": 105,
  "flight_time": "01:45",
  "flight_type": "KOU",
  "fuel_remaining_litres": "0.00",
  "fuel_uplift_litres": "50.00",
  "incident_or_observations": null,
  "instrument_flying_mins": 45,
  "invoice_number": "INV001",
  "is_billable_flight": true,
  "is_billed": true,
  "landing_time_utc": "2025-03-01T10:00:00.000Z",
  "night_flying_mins": 30,
  "non_billing_approved_by_member_id": null,
  "non_billing_reason": null,
  "number_of_landings": 1,
  "off_block_time_utc": "2025-03-01T08:00:00.000Z",
  "oil_uplift_litres": "1.50",
  "on_block_time_utc": "2025-03-01T10:15:00.000Z",
  "personal_remarks": "Smooth flight",
  "persons_on_board": 4,
  "pic_member_id": 6,
  "pic_role": "PIC",
  "priv_or_com_flight": "C",
  "status": "NEW",
  "takeoff_time_utc": "2025-03-01T08:15:00.000Z",
  "total_time_in_service": "2.00",
  "updated_at": Any<String>,
  "updated_by": 10,
}
`;

exports[`GET /flight-log should return all data for ac when user is admin 1`] = `
[
  {
    "aircraft_registration": "OH-STL",
    "ajlb_blank_rows_before": 0,
    "ajlb_seq_no": 2,
    "arrival_airport": "EFTU",
    "billable_member_id": 5,
    "billing_remarks": "Night navigation exercise",
    "block_mins": 125,
    "block_time": "02:05",
    "created_at": Any<String>,
    "created_by": 6,
    "crew2_member_id": 8,
    "crew2_role": "FE",
    "crew3_member_id": null,
    "crew3_role": null,
    "crew4_member_id": null,
    "crew4_role": null,
    "departure_airport": "EFHK",
    "flight_id": "eject",
    "flight_mins": 105,
    "flight_time": "01:45",
    "flight_type": "NAV",
    "fuel_remaining_litres": "0.00",
    "fuel_uplift_litres": "45.00",
    "incident_or_observations": null,
    "instrument_flying_mins": 60,
    "invoice_number": "INV004",
    "is_billable_flight": true,
    "is_billed": true,
    "landing_time_utc": "2024-03-12T01:00:00.000Z",
    "night_flying_mins": 115,
    "non_billing_approved_by_member_id": null,
    "non_billing_reason": null,
    "number_of_landings": 1,
    "off_block_time_utc": "2024-03-11T23:05:00.000Z",
    "oil_uplift_litres": "1.00",
    "on_block_time_utc": "2024-03-12T01:10:00.000Z",
    "personal_remarks": "Cross-day night flight",
    "persons_on_board": 2,
    "pic_member_id": 7,
    "pic_role": "PIC",
    "priv_or_com_flight": "C",
    "status": "NEW",
    "takeoff_time_utc": "2024-03-11T23:15:00.000Z",
    "total_time_in_service": "1.92",
    "updated_at": Any<String>,
    "updated_by": Any<Number>,
  },
  {
    "aircraft_registration": "OH-STL",
    "ajlb_blank_rows_before": 0,
    "ajlb_seq_no": 1,
    "arrival_airport": "EFHK",
    "billable_member_id": 1,
    "billing_remarks": "N/A",
    "block_mins": 135,
    "block_time": "02:15",
    "created_at": Any<String>,
    "created_by": 10,
    "crew2_member_id": 7,
    "crew2_role": "FI",
    "crew3_member_id": null,
    "crew3_role": null,
    "crew4_member_id": null,
    "crew4_role": null,
    "departure_airport": "EFHK",
    "flight_id": "mikify",
    "flight_mins": 105,
    "flight_time": "01:45",
    "flight_type": "KOU",
    "fuel_remaining_litres": "0.00",
    "fuel_uplift_litres": "50.00",
    "incident_or_observations": null,
    "instrument_flying_mins": 45,
    "invoice_number": "INV001",
    "is_billable_flight": true,
    "is_billed": true,
    "landing_time_utc": "2025-03-01T10:00:00.000Z",
    "night_flying_mins": 30,
    "non_billing_approved_by_member_id": null,
    "non_billing_reason": null,
    "number_of_landings": 1,
    "off_block_time_utc": "2025-03-01T08:00:00.000Z",
    "oil_uplift_litres": "1.50",
    "on_block_time_utc": "2025-03-01T10:15:00.000Z",
    "personal_remarks": "Smooth flight",
    "persons_on_board": 4,
    "pic_member_id": 6,
    "pic_role": "PIC",
    "priv_or_com_flight": "C",
    "status": "NEW",
    "takeoff_time_utc": "2025-03-01T08:15:00.000Z",
    "total_time_in_service": "2.00",
    "updated_at": Any<String>,
    "updated_by": Any<Number>,
  },
  {
    "aircraft_registration": "OH-STL",
    "ajlb_blank_rows_before": 0,
    "ajlb_seq_no": 2,
    "arrival_airport": "EFHK",
    "billable_member_id": 4,
    "billing_remarks": "N/A",
    "block_mins": 132,
    "block_time": "02:12",
    "created_at": Any<String>,
    "created_by": 8,
    "crew2_member_id": 8,
    "crew2_role": "FE",
    "crew3_member_id": null,
    "crew3_role": null,
    "crew4_member_id": null,
    "crew4_role": null,
    "departure_airport": "EFHK",
    "flight_id": "bLwnAstr0",
    "flight_mins": 90,
    "flight_time": "01:30",
    "flight_type": "OTH",
    "fuel_remaining_litres": "0.00",
    "fuel_uplift_litres": "40.00",
    "incident_or_observations": null,
    "instrument_flying_mins": 30,
    "invoice_number": null,
    "is_billable_flight": false,
    "is_billed": false,
    "landing_time_utc": "2025-03-03T12:00:00.000Z",
    "night_flying_mins": 20,
    "non_billing_approved_by_member_id": 2,
    "non_billing_reason": "Club activity",
    "number_of_landings": 1,
    "off_block_time_utc": "2025-03-03T10:00:00.000Z",
    "oil_uplift_litres": "1.00",
    "on_block_time_utc": "2025-03-03T12:12:00.000Z",
    "personal_remarks": "Routine check",
    "persons_on_board": 3,
    "pic_member_id": 5,
    "pic_role": "PIC",
    "priv_or_com_flight": "C",
    "status": "NEW",
    "takeoff_time_utc": "2025-03-03T10:30:00.000Z",
    "total_time_in_service": "1.50",
    "updated_at": Any<String>,
    "updated_by": Any<Number>,
  },
]
`;

exports[`GET /flight-log/totals should return 200 with all ac totals 1`] = `
{
  "ac_total_flight_time": "250:55",
  "aircraft_registration": "OH-STL",
  "ajlb_seq_no": 3,
  "flight_log_mins_this_ajlb": 0,
  "flight_time_this_ajlb": "0:00",
  "total_flight_mins_at_ajlb_start": 15055,
  "total_flight_time_at_ajlb_start": "250:55",
}
`;

exports[`GET /flight-log/totals should return 200 with valid registration 1`] = `
{
  "ac_total_flight_time": "250:55",
  "aircraft_registration": "OH-STL",
  "ajlb_seq_no": 3,
  "flight_log_mins_this_ajlb": 0,
  "flight_time_this_ajlb": "0:00",
  "total_flight_mins_at_ajlb_start": 15055,
  "total_flight_time_at_ajlb_start": "250:55",
}
`;

exports[`PATCH /flight-log/ should update a flight log when billable member matches token member or user has elevated role, using 1 and [ 'flightlog.admin' ] 1`] = `
{
  "aircraft_registration": "OH-STL",
  "ajlb_blank_rows_before": 0,
  "ajlb_seq_no": 2,
  "arrival_airport": "EFHK",
  "billable_member_id": 4,
  "billing_remarks": "N/A",
  "block_mins": 132,
  "block_time": "02:12",
  "created_at": Any<String>,
  "created_by": 8,
  "crew2_member_id": 2,
  "crew2_role": "FE",
  "crew3_member_id": null,
  "crew3_role": null,
  "crew4_member_id": null,
  "crew4_role": null,
  "departure_airport": "EFHK",
  "flight_id": "bLwnAstr0",
  "flight_mins": 90,
  "flight_time": "01:30",
  "flight_type": "OTH",
  "fuel_remaining_litres": "0.00",
  "fuel_uplift_litres": "40.00",
  "incident_or_observations": null,
  "instrument_flying_mins": 30,
  "invoice_number": null,
  "is_billable_flight": false,
  "is_billed": false,
  "landing_time_utc": "2025-03-03T12:00:00.000Z",
  "night_flying_mins": 20,
  "non_billing_approved_by_member_id": 2,
  "non_billing_reason": "Club activity",
  "number_of_landings": 1,
  "off_block_time_utc": "2025-03-03T10:00:00.000Z",
  "oil_uplift_litres": "1.00",
  "on_block_time_utc": "2025-03-03T12:12:00.000Z",
  "personal_remarks": "Routine check",
  "persons_on_board": 3,
  "pic_member_id": 5,
  "pic_role": "PIC",
  "priv_or_com_flight": "C",
  "status": "NEW",
  "takeoff_time_utc": "2025-03-03T10:30:00.000Z",
  "total_time_in_service": "1.50",
  "updated_at": Any<String>,
  "updated_by": 1,
}
`;

exports[`PATCH /flight-log/ should update a flight log when billable member matches token member or user has elevated role, using 1 and [ 'flightlog.admin' ] 2`] = `
{
  "aircraft_registration": "OH-STL",
  "ajlb_blank_rows_before": 0,
  "ajlb_seq_no": 2,
  "arrival_airport": "EFHK",
  "billable_member_id": 4,
  "billing_remarks": "N/A",
  "block_mins": 132,
  "block_time": "02:12",
  "created_at": Any<String>,
  "created_by": 8,
  "crew2_member_id": 8,
  "crew2_role": "FE",
  "crew3_member_id": null,
  "crew3_role": null,
  "crew4_member_id": null,
  "crew4_role": null,
  "departure_airport": "EFHK",
  "flight_id": "bLwnAstr0",
  "flight_mins": 90,
  "flight_time": "01:30",
  "flight_type": "OTH",
  "fuel_remaining_litres": "0.00",
  "fuel_uplift_litres": "40.00",
  "incident_or_observations": null,
  "instrument_flying_mins": 30,
  "invoice_number": null,
  "is_billable_flight": false,
  "is_billed": false,
  "landing_time_utc": "2025-03-03T12:00:00.000Z",
  "night_flying_mins": 20,
  "non_billing_approved_by_member_id": 2,
  "non_billing_reason": "Club activity",
  "number_of_landings": 1,
  "off_block_time_utc": "2025-03-03T10:00:00.000Z",
  "oil_uplift_litres": "1.00",
  "on_block_time_utc": "2025-03-03T12:12:00.000Z",
  "personal_remarks": "Routine check",
  "persons_on_board": 3,
  "pic_member_id": 5,
  "pic_role": "PIC",
  "priv_or_com_flight": "C",
  "status": "NEW",
  "takeoff_time_utc": "2025-03-03T10:30:00.000Z",
  "total_time_in_service": "1.50",
  "updated_at": Any<String>,
  "updated_by": 1,
}
`;

exports[`PATCH /flight-log/ should update a flight log when billable member matches token member or user has elevated role, using 4 and [ 'flightlog.user' ] 1`] = `
{
  "aircraft_registration": "OH-STL",
  "ajlb_blank_rows_before": 0,
  "ajlb_seq_no": 2,
  "arrival_airport": "EFHK",
  "billable_member_id": 4,
  "billing_remarks": "N/A",
  "block_mins": 132,
  "block_time": "02:12",
  "created_at": Any<String>,
  "created_by": 8,
  "crew2_member_id": 2,
  "crew2_role": "FE",
  "crew3_member_id": null,
  "crew3_role": null,
  "crew4_member_id": null,
  "crew4_role": null,
  "departure_airport": "EFHK",
  "flight_id": "bLwnAstr0",
  "flight_mins": 90,
  "flight_time": "01:30",
  "flight_type": "OTH",
  "fuel_remaining_litres": "0.00",
  "fuel_uplift_litres": "40.00",
  "incident_or_observations": null,
  "instrument_flying_mins": 30,
  "invoice_number": null,
  "is_billable_flight": false,
  "is_billed": false,
  "landing_time_utc": "2025-03-03T12:00:00.000Z",
  "night_flying_mins": 20,
  "non_billing_approved_by_member_id": 2,
  "non_billing_reason": "Club activity",
  "number_of_landings": 1,
  "off_block_time_utc": "2025-03-03T10:00:00.000Z",
  "oil_uplift_litres": "1.00",
  "on_block_time_utc": "2025-03-03T12:12:00.000Z",
  "personal_remarks": "Routine check",
  "persons_on_board": 3,
  "pic_member_id": 5,
  "pic_role": "PIC",
  "priv_or_com_flight": "C",
  "status": "NEW",
  "takeoff_time_utc": "2025-03-03T10:30:00.000Z",
  "total_time_in_service": "1.50",
  "updated_at": Any<String>,
  "updated_by": 4,
}
`;

exports[`PATCH /flight-log/ should update a flight log when billable member matches token member or user has elevated role, using 4 and [ 'flightlog.user' ] 2`] = `
{
  "aircraft_registration": "OH-STL",
  "ajlb_blank_rows_before": 0,
  "ajlb_seq_no": 2,
  "arrival_airport": "EFHK",
  "billable_member_id": 4,
  "billing_remarks": "N/A",
  "block_mins": 132,
  "block_time": "02:12",
  "created_at": Any<String>,
  "created_by": 8,
  "crew2_member_id": 8,
  "crew2_role": "FE",
  "crew3_member_id": null,
  "crew3_role": null,
  "crew4_member_id": null,
  "crew4_role": null,
  "departure_airport": "EFHK",
  "flight_id": "bLwnAstr0",
  "flight_mins": 90,
  "flight_time": "01:30",
  "flight_type": "OTH",
  "fuel_remaining_litres": "0.00",
  "fuel_uplift_litres": "40.00",
  "incident_or_observations": null,
  "instrument_flying_mins": 30,
  "invoice_number": null,
  "is_billable_flight": false,
  "is_billed": false,
  "landing_time_utc": "2025-03-03T12:00:00.000Z",
  "night_flying_mins": 20,
  "non_billing_approved_by_member_id": 2,
  "non_billing_reason": "Club activity",
  "number_of_landings": 1,
  "off_block_time_utc": "2025-03-03T10:00:00.000Z",
  "oil_uplift_litres": "1.00",
  "on_block_time_utc": "2025-03-03T12:12:00.000Z",
  "personal_remarks": "Routine check",
  "persons_on_board": 3,
  "pic_member_id": 5,
  "pic_role": "PIC",
  "priv_or_com_flight": "C",
  "status": "NEW",
  "takeoff_time_utc": "2025-03-03T10:30:00.000Z",
  "total_time_in_service": "1.50",
  "updated_at": Any<String>,
  "updated_by": 4,
}
`;
